# StdAvr

./: .gitignore  CMakeLists.txt
src/: algorithm.hpp  cstddef.hpp  cstdint.hpp  cstdlib.hpp  initializer_list.hpp  iterator.hpp  namespace.hpp  tuple.hpp  type_traits.hpp  utility.hpp  vector.hpp
test/: CMakeLists.txt  algorithm_test.cpp  iterator_test.cpp  tuple_test.cpp  type_traits_test.cpp  utility_test.cpp  vector_test.cpp
